--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,5 +43,17 @@ body.modo-escuro header h1 {
 @media (max-width: 1023px) {
   header {
     flex-direction: column;
+    padding-top: 1rem;
+  }
+
+  header h1 {
+    font-size: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  header img {
+    margin-left: 0;
+    width: 120px;
   }
 }
